SERVER-66336 ConfigsvrCoordinators initial checkpoint may incur in DuplicateKey error